<resources>
    <string name="app_name">YuYo</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="feedback">Send Feedback</string>
    <string name="aboutus">About us</string>
    <string name="logout">Log out</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="action_settings">Settings</string>
    <string name="search_label">YUYO</string>
    <string name="search_hint">Search course</string>
    <string name="notification">Notification</string>
    <string name="title_activity_testing">TestingActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
