<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/teacher"
            android:checked="false"
            android:icon="@drawable/teacher"
            android:title="@string/teacher" />

        <item
            android:id="@+id/student"
            android:checked="false"
            android:icon="@drawable/student"
            android:title="@string/student" />

        <item
            android:id="@+id/profile"
            android:checked="false"
            android:icon="@drawable/profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/settings"
            android:title="@string/settings" />


        <item
            android:id="@+id/aboutUs"
            android:checked="false"
            android:icon="@drawable/aboutus"
            android:title="@string/aboutus" />

    </group>
</menu>